enhancements to add pagination, dependency trim, etc